--- a/static/createAccount.html
+++ b/static/createAccount.html
@@ -17,9 +17,15 @@
 
 			<br>
       			<label for="year">Year of Study</label>
+				  <br>
+				  <select name="concen" id="concen">
+    				<option value="first">1st Year</option>
+    				<option value="sec">2nd Year</option>
+    				<option value="third">3rd Year</option>
+    				<option value="fourth">4th Year</option>
+					<option value="fifthP">5+ Year</option>
+  				</select>
 			<br>
-      			<input type="text" placeholder="Enter Year" name="year" required>
-        		<br>
 
 			<br>
 			<label for="major">Major</label>
