--- a/static/createAccount.html
+++ b/static/createAccount.html
@@ -6,6 +6,23 @@
 </head>
 
 <body>
+	<h2>Create Login</h2>
+	<form> 
+		<div class="container">
+			  <label for="username">Username</label>
+		<br>
+			  <input type="text" placeholder="Enter Username" name="username" required>
+		<br>
+		<br>
+			  <label for="pswd">Password</label>
+		<br>
+			  <input type="password" placeholder="Enter Password" name="pswd" required>
+			<br>
+		<br>
+			  <button type="submit">Login</button>
+
+		</div>
+	</form> 
 	<h2>Tell Us About Yourself</h2>
 
 	<form> 
