changed the text

--- a/static/MatchPage.html
+++ b/static/MatchPage.html
@@ -38,7 +38,7 @@
             <img src="icons/icon3.png" alt="" class="people-img">
             <h2 class="match-header">Find a Study Group</h2>
             <ul class="match-features">
-                <li class="match-features-item">Learn together, grow together!<br></li>
+                <li class="match-features-item">Looking to learn together, grow together?<br></li>
                 <li class="match-features-item">Find your classmates and study together!</li>
             </ul>
             <!-- <span class="num-people"></span> -->
